fix images not showing on gh-pages

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,16 +27,7 @@ body{
 }
 
 
-.area{
-  background-color: #4158D0;
-background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 
-
-    width: 100%;
-    height:100vh;
-
-
-}
 
 .circles{
     position: absolute;
